# FullHouseDevs

./: .gitignore  README.md  env  environment.yaml  model.ipynb  pyproject.toml  win_environment.yaml
apache_kafka/: docker-compose.yaml  start_apache.sh
cv_backend/: README.md  detector.py  server.py
cv_backend/core/: kafka.py
cv_backend/models/: schemas.py
game_engine_backend/: server.py
game_engine_backend/core/: game_state_manager.py  hi_lo.py  kafka.py
game_engine_backend/models/: schemas.py
game_engine_backend/monte_carlo/: blackjackSim.py
monte_carlo_backend/: server.py
monte_carlo_backend/core/: kafka.py
monte_carlo_backend/models/: schemas.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train6/: args.yaml  results.csv
simulations/: blackjack_simulator.py  strategies.py  strategy_simulator.py
simulations/results/: blackjack_results_1776808766.json  blackjack_results_1776808902.json  blackjack_results_1776809013.json  blackjack_results_new_1777255613.json
src/: config.py
src/cv/: detector.py  detector2.py
src/cv/model_utils/: train.py
tests/: test_game_engine_consumer.py  test_game_engine_simulation_run.py
ui/: README.md  overlay.py  socket_broadcast_example.py
ui/components/: analytics_panel.py  betting_panel.py  game_state_client.py  kafka_listener.py  video_stream.py
