[project]
name = "blackjack-cv"
version = "0.1.0"
description = "Computer Vision Blackjack Edge Analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.9.0",
    "ultralytics>=8.1.0", # YOLOv8 for object detection
    "torch",
    "torchvision",
]

# Define the PyTorch custom index URLs
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# Tell uv which PyTorch source to use based on the operating system
[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]